--- a/Views/Employee/GetAllEmployees.cshtml
+++ b/Views/Employee/GetAllEmployees.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Employee>
+﻿﻿@using Task2.ViewModel
+@model List<Task2.ViewModel.EmployeeViewModel>
 
 @{
     ViewData["Title"] = "Index";
