Added View Details Functionality

--- a/Views/Employee/GetAllEmployees.cshtml
+++ b/Views/Employee/GetAllEmployees.cshtml
@@ -54,6 +54,7 @@
                 </td>
                 <td>
                     <div role="group" class="w-60 btn-group">
+                        <a asp-controller="Employee" asp-action="ReadEmployee" asp-route-id="@item.Id" class=" btn btn-sm btn-success"><i class="bi bi-pencil-square"></i>View</a>&nbsp;
                         <a asp-controller="Employee" asp-action="EditEmployee" asp-route-id="@item.Id" class=" btn btn-sm btn-primary"><i class="bi bi-pencil-square"></i>Edit</a>&nbsp;
                         <a asp-controller="Employee" asp-action="DeleteEmployee" asp-route-id="@item.Id" class="btn btn-sm btn-danger"><i class="bi bi-trash-fill"></i>Delete</a>
                     </div>
