Overloading Action DeleteEmployee which was previously of different name; now it'so of same name

--- a/Views/Employee/DeleteEmployee.cshtml
+++ b/Views/Employee/DeleteEmployee.cshtml
@@ -5,7 +5,7 @@
         <h2>Delete Employee</h2>
     </div>
 
-    <form method="post" asp-action="DeleteEmp">
+    <form method="post" asp-action="DeleteEmployee">
         <input asp-for="Id" hidden />
         <div asp-validation-summary="All"></div>
 
