Multiple View Model

--- a/Views/Employee/GetAllEmployees.cshtml
+++ b/Views/Employee/GetAllEmployees.cshtml
@@ -1,5 +1,5 @@
 ﻿﻿@using Task2.ViewModel
-@model List<Task2.ViewModel.EmployeeViewModel>
+@model List<Task2.ViewModel.GetViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -29,7 +29,6 @@
         </tr>
         </thead>
         <tbody>
-
         @foreach (var item in Model)
         {
             <tr>
