--- a/Views/Employee/DeleteEmployee.cshtml
+++ b/Views/Employee/DeleteEmployee.cshtml
@@ -1,4 +1,4 @@
-﻿@model Task2.ViewModel.EmployeeViewModel
+﻿@model Task2.ViewModel.ReadViewModel
 
 <div class="container shadow p-5">
     <div class="row pb-2">
