--- a/Views/Employee/ReadEmployee.cshtml
+++ b/Views/Employee/ReadEmployee.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Task2.ViewModel
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model Task2.ViewModel.EmployeeViewModel
+@model Task2.ViewModel.ReadViewModel
 <div class="container shadow p-5">
     <div class="row pb-2">
         <h2>View Employee Details</h2>
